--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
 	<script src="../bin/TreeMap.js" type="text/javascript" charset="utf-8"></script>
 
 	<!-- Test classes -->
+	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
 	<script src="List.js" type="text/javascript" charset="utf-8"></script>
 	<script src="RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="TreeMap.js" type="text/javascript" charset="utf-8"></script>
