List now inherits from Traversable

--- a/test/index.html
+++ b/test/index.html
@@ -12,8 +12,11 @@
 	<script src="qunit/jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="qunit/qunit.js" type="text/javascript" charset="utf-8"></script>
 	
+	
 	<!-- Library classes -->
+	<script src="../bin/Mahj.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/Option.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../bin/Traversable.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/List.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/TreeMap.js" type="text/javascript" charset="utf-8"></script>
