no need to use textile for such a small file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Immutable Collections Library for Javascript
 	<script src="http://mads379.github.com/bachelorproject/bin/Option.js" type="text/javascript" charset="utf-8"></script>
 	<script src="http://mads379.github.com/bachelorproject/bin/Traversable.js" type="text/javascript" charset="utf-8"></script>
 	<script src="http://mads379.github.com/bachelorproject/bin/List.js" type="text/javascript" charset="utf-8"></script>
-notextile. <script type="text/javascript">
+	<script type="text/javascript">
 		
 		function wrapInFunction(code) {
 			return "(function(){"+code+"})()";
@@ -28,36 +28,34 @@ notextile. <script type="text/javascript">
 <h1 class="header">Immutable Collections Library for Javascript</h1>
 <ol id="menu">
 	<li>About</li>
-	<li>"The API":http://mads379.github.com/bachelorproject/api</li>
-	<li>"The Paper":http://mads379.github.com/bachelorproject/paper</li>
+	<li><a href="http://mads379.github.com/bachelorproject/api">The API</a></li>
+	<li><a href="http://mads379.github.com/bachelorproject/paper">The Paper</a></li>
 </ol>
 
 <div id="container">
 
-h2. About
+<h2>About</h2>
 
-"Immutable Collections Library for Javascript" is powerful set of immutable collection classes that will make it more natural to write javascript programs in a functional manner using features like higher-order functions.
+<p>"Immutable Collections Library for Javascript" is powerful set of immutable collection classes that will make it more natural to write javascript programs in a functional manner using features like higher-order functions.</p>
 
-The library is written in Coffeescript[1], a small language that compiles to JavaScript, as it adds a few semantics simplifies the code.
+<p>The library is written in Coffeescript[1], a small language that compiles to JavaScript, as it adds a few semantics simplifies the code.</p>
 
-This is a product of the bachelor project of Mads Hartmann Jensen under supervision of Peter Sestoft.
+<p>This is a product of the bachelor project of Mads Hartmann Jensen under supervision of Peter Sestoft.</p>
 
-h3. Try it out
+<h2>Try it out</h2>
 
-notextile. <textarea name="code" rows="20" cols="80" id="code">return new List(1,2,3,4,5,6,7,8,9,10).foldLeft(0)( function(acc,elem){     
+<textarea name="code" rows="20" cols="80" id="code">return new List(1,2,3,4,5,6,7,8,9,10).foldLeft(0)( function(acc,elem){     
   return acc + elem;
 });    
 </textarea>
 <button type="submit" id="evaluate">Evaluate</button>
 
-h2. Getting the code
+<h2>Getting the code</h2>
 
-You can download this project in either "zip":http://github.com/mads379/bachelorproject/zipball/master or "tar":http://github.com/mads379/bachelorproject/tarball/master
+<p>You can download this project in either <a href="http://github.com/mads379/bachelorproject/zipball/master">zip</a> or <a href="http://github.com/mads379/bachelorproject/tarball/master">tar</a></p>
 
-You can also clone the project with "Git":http://git-scm.com by running:<pre>$ git clone git://github.com/mads379/bachelorproject</pre>
+<p>You can also clone the project with "Git":http://git-scm.com by running:<pre>$ git clone git://github.com/mads379/bachelorproject</pre></p>
 
-get the source code on "GitHub":http://github.com/mads379/bachelorproject.
-
-fn1. http://jashkenas.github.com/coffee-script/
+<p>get the source code on <a href="http://github.com/mads379/bachelorproject">GitHub</a>.</p>
 
 </div>
