Woops, forgot to use the proper stylesheet

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ title: Immutable Collections Library for Javascript
 ---
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<!-- <link rel="stylesheet" href="http://mads379.github.com/bachelorproject/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8"> -->
-	<link rel="stylesheet" href="file:///Users/Mads/dev/projects/bachelorproject/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="http://mads379.github.com/bachelorproject/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<!-- <link rel="stylesheet" href="file:///Users/Mads/dev/projects/bachelorproject/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8"> -->
 	<script src="http://mads379.github.com/bachelorproject/js/jquery-1.5.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="http://mads379.github.com/bachelorproject/bin/Mahj.js" type="text/javascript" charset="utf-8"></script>
 	<script src="http://mads379.github.com/bachelorproject/bin/Option.js" type="text/javascript" charset="utf-8"></script>
