Commenting out stuff that isn't finished yet

--- a/index.html
+++ b/index.html
@@ -42,19 +42,21 @@ title: Immutable Collections Library for Javascript
 <h1 class="header">Immutable Collections Library for Javascript</h1>
 <ol id="menu">
 	<li>About</li>
-	<li><a href="http://mads379.github.com/bachelorproject/api">The API</a></li>
-	<li><a href="http://mads379.github.com/bachelorproject/paper">The Paper</a></li>
+	<!-- <li><a href="http://mads379.github.com/bachelorproject/api">The API</a></li>
+	<li><a href="http://mads379.github.com/bachelorproject/paper">The Paper</a></li> -->
 </ol>
 
 <div id="container">
 
 <h2>About</h2>
 
-<p>"Immutable Collections Library for Javascript" is powerful set of immutable collection classes that will make it more natural to write javascript programs in a functional manner using features like higher-order functions.</p>
+Under development.
+
+<!-- <p>"Immutable Collections Library for Javascript" is powerful set of immutable collection classes that will make it more natural to write javascript programs in a functional manner using features like higher-order functions.</p>
 
 <p>The library is written in Coffeescript[1], a small language that compiles to JavaScript, as it adds a few semantics simplifies the code.</p>
 
-<p>This is a product of the bachelor project of Mads Hartmann Jensen under supervision of Peter Sestoft.</p>
+<p>This is a product of the bachelor project of Mads Hartmann Jensen under supervision of Peter Sestoft.</p> -->
 
 <h2>Try it out</h2>
 <p>You can try out the different collections classes by typing javascript in the textarea below and hitting 'Evaluate' button.</p>
@@ -72,13 +74,13 @@ return sum;</pre>
 </div>
 <button type="submit" id="evaluate">Evaluate</button>
 
-<h2>Getting the code</h2>
+<!-- <h2>Getting the code</h2>
 
 <p>You can download this project in either <a href="http://github.com/mads379/bachelorproject/zipball/master">zip</a> or <a href="http://github.com/mads379/bachelorproject/tarball/master">tar</a></p>
 
 <p>You can also clone the project with <a href="http://git-scm.com">Git</a> by running:<pre>$ git clone git://github.com/mads379/bachelorproject</pre></p>
 
-<p>get the source code on <a href="http://github.com/mads379/bachelorproject">GitHub</a>.</p>
+<p>get the source code on <a href="http://github.com/mads379/bachelorproject">GitHub</a>.</p> -->
 
 </div>
 </html>
