--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ title: Immutable Collections Library for Javascript
 
 <div id="container">
 
-<h2>About</h2>
+<!-- <h2>About</h2>
 
-Under development.
+Under development. -->
 
 <!-- <p>"Immutable Collections Library for Javascript" is powerful set of immutable collection classes that will make it more natural to write javascript programs in a functional manner using features like higher-order functions.</p>
 
