--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: Immutable Collections Library for Javascript
 	<li><a href="http://mads379.github.com/bachelorproject/paper">The Paper</a></li> -->
 </ol>
 
-<div id="container">
+<div id="container" class="clearfix">
 
 <!-- <h2>About</h2>
 
