--- a/test/index.html
+++ b/test/index.html
@@ -20,12 +20,14 @@
 	<script src="../bin/List.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/TreeMap.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../bin/TreeSet.js" type="text/javascript" charset="utf-8"></script>
 
 	<!-- Test classes -->
 	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
 	<script src="List.js" type="text/javascript" charset="utf-8"></script>
 	<script src="RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="TreeMap.js" type="text/javascript" charset="utf-8"></script>
+	<script src="TreeSet.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
