--- a/test/index.html
+++ b/test/index.html
@@ -21,6 +21,7 @@
 	<script src="../bin/RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/TreeMap.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/TreeSet.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../bin/Stack.js" type="text/javascript" charset="utf-8"></script>
 
 	<!-- Test classes -->
 	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
@@ -28,6 +29,7 @@
 	<script src="RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="TreeMap.js" type="text/javascript" charset="utf-8"></script>
 	<script src="TreeSet.js" type="text/javascript" charset="utf-8"></script>
+	<script src="Stack.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
