Implemented a Queue based on two lists. Also wrote tests

--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,7 @@
 	<script src="../bin/TreeMap.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/TreeSet.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/Stack.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../bin/Queue.js" type="text/javascript" charset="utf-8"></script>
 
 	<!-- Test classes -->
 	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
@@ -30,6 +31,7 @@
 	<script src="TreeMap.js" type="text/javascript" charset="utf-8"></script>
 	<script src="TreeSet.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Stack.js" type="text/javascript" charset="utf-8"></script>
+	<script src="Queue.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
