Implemented Complete Binary Tree. Needed for Random Access List

--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,7 @@
 	<script src="../bin/TreeSet.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/Stack.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/Queue.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../bin/CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
 
 	<!-- Test classes -->
 	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
@@ -32,6 +33,7 @@
 	<script src="TreeSet.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Stack.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Queue.js" type="text/javascript" charset="utf-8"></script>
+	<script src="CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
