--- a/test/index.html
+++ b/test/index.html
@@ -24,6 +24,7 @@
 	<script src="../bin/Stack.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/Queue.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../bin/RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
 
 	<!-- Test classes -->
 	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
@@ -34,6 +35,7 @@
 	<script src="Stack.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Queue.js" type="text/javascript" charset="utf-8"></script>
 	<script src="CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
+	<script src="RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
