Added implementation of Leaf Leaning Red Black Tree.
This commit also includes a few simple test cases.

--- a/test/index.html
+++ b/test/index.html
@@ -25,6 +25,7 @@
 	<script src="../bin/Queue.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../bin/LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 
 	<!-- Test classes -->
 	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
@@ -36,6 +37,7 @@
 	<script src="Queue.js" type="text/javascript" charset="utf-8"></script>
 	<script src="CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
+	<script src="LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
