Switching to mugs namespace step 3

--- a/test/index.html
+++ b/test/index.html
@@ -6,15 +6,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Test</title>
 	<meta name="author" content="Mads Hartmann Jensen">
-	
+
 	<!-- Qunit -->
 	<link   href="qunit/qunit.css" rel="stylesheet" type="text/css" media="screen" title="no title" charset="utf-8">
 	<script src="qunit/jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="qunit/qunit.js" type="text/javascript" charset="utf-8"></script>
-	
+
 
 	<!-- Library classes -->
-	<script src="../bin/Mahj.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../bin/Mugs.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/Option.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/Traversable.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/List.js" type="text/javascript" charset="utf-8"></script>
