--- a/test/index.html
+++ b/test/index.html
@@ -20,12 +20,13 @@
 	<script src="../bin/List.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/TreeMap.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../bin/TreeSet.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/Stack.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/Queue.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../bin/LLRBSet.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../bin/LLRBMap.js" type="text/javascript" charset="utf-8"></script>
 
 	<!-- Test classes -->
 	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
@@ -38,6 +39,7 @@
 	<script src="CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
 	<script src="LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
+	<script src="GenericSet.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
