Completed the implementation of LLRBSet so it passes all the generic set tests

--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,7 @@
 	<script src="../bin/List.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/TreeMap.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../bin/TreeSet.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/Stack.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/Queue.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
@@ -33,7 +34,6 @@
 	<script src="List.js" type="text/javascript" charset="utf-8"></script>
 	<script src="RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="TreeMap.js" type="text/javascript" charset="utf-8"></script>
-	<script src="TreeSet.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Stack.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Queue.js" type="text/javascript" charset="utf-8"></script>
 	<script src="CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
