--- a/test/index.html
+++ b/test/index.html
@@ -33,13 +33,13 @@
 	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
 	<script src="List.js" type="text/javascript" charset="utf-8"></script>
 	<script src="RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
-	<script src="TreeMap.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Stack.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Queue.js" type="text/javascript" charset="utf-8"></script>
 	<script src="CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
 	<script src="LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="GenericSet.js" type="text/javascript" charset="utf-8"></script>
+	<script src="GenericMap.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
