--- a/test/performance/tree_comparison.html
+++ b/test/performance/tree_comparison.html
@@ -26,21 +26,21 @@
 
 	<script type="text/javascript">
 
-    var llrbmapInsert = new mugs.LLRBMap();
+    var llrbmapInsert, treemapInsert;
+
     JSLitmus.test('Creating a LLRBMap and inserting 1000 items', function() {
+      llrbmapInsert = new mugs.LLRBMap();
       for ( var i = 0 ; i < 1000 ; i++ ) {
         llrbmapInsert = llrbmapInsert.insert(i,i);
       }
     });
-    console.log(llrbmapInsert.values().size());
 
-    var treemapInsert = new mugs.TreeMap();
 	  JSLitmus.test('Creating a TreeMap and inserting 1000 items', function() {
-      for ( var i = 0 ; i < 10000 ; i++ ) {
+      treemapInsert = new mugs.TreeMap();
+      for ( var i = 0 ; i < 1000 ; i++ ) {
         treemapInsert = treemapInsert.insert(i,i);
       }
 	  });
-    console.log(treemapInsert.values().size());
 
 	</script>
 
