Made all data type tests generic

--- a/test/index.html
+++ b/test/index.html
@@ -30,16 +30,17 @@
 	<script src="../bin/LLRBMap.js" type="text/javascript" charset="utf-8"></script>
 
 	<!-- Test classes -->
-	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
-	<script src="List.js" type="text/javascript" charset="utf-8"></script>
 	<script src="RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
-	<script src="Stack.js" type="text/javascript" charset="utf-8"></script>
-	<script src="Queue.js" type="text/javascript" charset="utf-8"></script>
 	<script src="CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
 	<script src="LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
-	<script src="GenericSet.js" type="text/javascript" charset="utf-8"></script>
-	<script src="GenericMap.js" type="text/javascript" charset="utf-8"></script>
+
+	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
+	<script src="List.js" type="text/javascript" charset="utf-8"></script>
+	<script src="Stack.js" type="text/javascript" charset="utf-8"></script>
+	<script src="Queue.js" type="text/javascript" charset="utf-8"></script>
+	<script src="Set.js" type="text/javascript" charset="utf-8"></script>
+	<script src="Map.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
