Moving files around.

--- a/test/suite.html
+++ b/test/suite.html
@@ -8,9 +8,9 @@
 	<meta name="author" content="Mads Hartmann Jensen">
 
 	<!-- Qunit -->
-	<link   href="qunit/qunit.css" rel="stylesheet" type="text/css" media="screen" title="no title" charset="utf-8">
-	<script src="qunit/jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="qunit/qunit.js" type="text/javascript" charset="utf-8"></script>
+	<link   href="../lib/qunit/qunit.css" rel="stylesheet" type="text/css" media="screen" title="no title" charset="utf-8">
+	<script src="../lib/qunit/jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../lib/qunit/qunit.js" type="text/javascript" charset="utf-8"></script>
 
 
 	<!-- Library classes -->
@@ -29,18 +29,19 @@
 	<script src="../bin/LLRBSet.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../bin/LLRBMap.js" type="text/javascript" charset="utf-8"></script>
 
-	<!-- Test classes -->
-	<script src="RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
-	<script src="CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
-	<script src="RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
-	<script src="LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
+	<!-- Test classes (data structures) -->
+	<script src="data-structures/RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
+	<script src="data-structures/CompleteBinaryTree.js" type="text/javascript" charset="utf-8"></script>
+	<script src="data-structures/RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
+	<script src="data-structures/LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 
-	<script src="Option.js" type="text/javascript" charset="utf-8"></script>
-	<script src="List.js" type="text/javascript" charset="utf-8"></script>
-	<script src="Stack.js" type="text/javascript" charset="utf-8"></script>
-	<script src="Queue.js" type="text/javascript" charset="utf-8"></script>
-	<script src="Set.js" type="text/javascript" charset="utf-8"></script>
-	<script src="Map.js" type="text/javascript" charset="utf-8"></script>
+	<!-- Test classes (data types) -->
+	<script src="data-types/Option.js" type="text/javascript" charset="utf-8"></script>
+	<script src="data-types/List.js" type="text/javascript" charset="utf-8"></script>
+	<script src="data-types/Stack.js" type="text/javascript" charset="utf-8"></script>
+	<script src="data-types/Queue.js" type="text/javascript" charset="utf-8"></script>
+	<script src="data-types/Set.js" type="text/javascript" charset="utf-8"></script>
+	<script src="data-types/Map.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
