--- a/index.html
+++ b/index.html
@@ -1,86 +1,87 @@
 ---
-title: Immutable Collections Library for Javascript
+title: Mugs
 ---
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<link rel="stylesheet" href="http://mads379.github.com/bachelorproject/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<!-- <link rel="stylesheet" href="file:///Users/Mads/dev/projects/bachelorproject/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8"> -->
-	<script src="http://mads379.github.com/bachelorproject/js/jquery-1.5.1.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://mads379.github.com/bachelorproject/bin/Mahj.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://mads379.github.com/bachelorproject/bin/Option.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://mads379.github.com/bachelorproject/bin/Traversable.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://mads379.github.com/bachelorproject/bin/List.js" type="text/javascript" charset="utf-8"></script>
-	
-	
+	<link rel="stylesheet" href="http://mads379.github.com/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="file:///Users/Mads/dev/projects/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<script src="http://mads379.github.com/mugs/js/jquery-1.5.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://mads379.github.com/mugs/bin/Mahj.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://mads379.github.com/mugs/bin/Option.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://mads379.github.com/mugs/bin/Traversable.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://mads379.github.com/mugs/bin/List.js" type="text/javascript" charset="utf-8"></script>
+
+
 	<script src="js/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/ace/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/ace/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
 	<script>
 	window.onload = function() {
-	    var editor = ace.edit("editor");
-	    editor.setTheme("ace/theme/twilight");
 
-	    var JavaScriptMode = require("ace/mode/javascript").Mode;
-	    editor.getSession().setMode(new JavaScriptMode());
-	 	editor.renderer.setShowGutter(false);
-		editor.renderer.setShowPrintMargin(false);
-		
+
 		function wrapInFunction(code) {
 			return "(function(){"+code+"})()";
 		}
-		
+
 		$('#evaluate').bind('click',function() {
-			alert("Result: " + eval(wrapInFunction(editor.renderer.content.innerText.replace(/\\n/g,""))));
+      alert(eval(wrapInFunction($('#editor').val().replace(/\n/g,""))));
 		});
-	
+
 	};
 	</script>
 </head>
 
 
-<h1 class="header">Immutable Collections Library for Javascript</h1>
-<ol id="menu">
-	<li>About</li>
-	<!-- <li><a href="http://mads379.github.com/bachelorproject/api">The API</a></li>
-	<li><a href="http://mads379.github.com/bachelorproject/paper">The Paper</a></li> -->
-</ol>
+<div id="container" >
 
-<div id="container" class="clearfix">
+  <h1 class="header">Mugs</h1>
+  <h2>Immutable Collections Library for Javascript</h2>
 
-<!-- <h2>About</h2>
+  <div id="content" class="clearfix">
 
-Under development. -->
+    <h3>About</h3>
 
-<!-- <p>"Immutable Collections Library for Javascript" is powerful set of immutable collection classes that will make it more natural to write javascript programs in a functional manner using features like higher-order functions.</p>
+    <p><strong>Under development.</strong></p>
 
-<p>The library is written in Coffeescript[1], a small language that compiles to JavaScript, as it adds a few semantics simplifies the code.</p>
+    <p>Mugs is an immutable collections library for JavaScript</p>
 
-<p>This is a product of the bachelor project of Mads Hartmann Jensen under supervision of Peter Sestoft.</p> -->
+  <!-- <p>"Immutable Collections Library for Javascript" is powerful set of immutable collection classes that will make it more natural to write javascript programs in a functional manner using features like higher-order functions.</p>
 
-<h2>Try it out</h2>
-<p>You can try out the different collections classes by typing javascript in the textarea below and hitting 'Evaluate' button.</p>
+       <p>The library is written in Coffeescript[1], a small language that compiles to JavaScript, as it adds a few semantics simplifies the code.</p>
 
-<div class="editor_container">
-<pre id="editor">var list = new List(1,2,3,4,5,6,7,8,9,10);
+  <p>This is a product of the bachelor project of Mads Hartmann Jensen under supervision of Peter Sestoft.</p> -->
 
-var add = function(x,y) { 
-  return x + y ;
+  <h3>Try it out</h3>
+  <p>You can try out the different collections classes by typing javascript in the textarea below and hitting 'Evaluate' button.</p>
+
+
+  <textarea id="editor">var list = new List(1,2,3,4,5,6,7,8,9,10);
+
+var add = function(x,y) {
+    return x + y ;
 }
 
 var sum = list.foldLeft(0)( add );
 
-return sum;</pre>
-</div>
-<button type="submit" id="evaluate">Evaluate</button>
+return sum;</textarea>
+  <button type="submit" id="evaluate">Evaluate</button>
+
+  <h3>Getting started</h3>
 
 <!-- <h2>Getting the code</h2>
 
-<p>You can download this project in either <a href="http://github.com/mads379/bachelorproject/zipball/master">zip</a> or <a href="http://github.com/mads379/bachelorproject/tarball/master">tar</a></p>
+<p>You can download this project in either <a href="http://github.com/mads379/mugs/zipball/master">zip</a> or <a href="http://github.com/mads379/mugs/tarball/master">tar</a></p>
 
-<p>You can also clone the project with <a href="http://git-scm.com">Git</a> by running:<pre>$ git clone git://github.com/mads379/bachelorproject</pre></p>
+<p>You can also clone the project with <a href="http://git-scm.com">Git</a> by running:<pre>$ git clone git://github.com/mads379/mugs</pre></p>
 
-<p>get the source code on <a href="http://github.com/mads379/bachelorproject">GitHub</a>.</p> -->
-
+<p>get the source code on <a href="http://github.com/mads379/mugs">GitHub</a>.</p> -->
 </div>
+
+  <div id="footer">
+    <p>Mugs has been developmed by Mads Hartmann Jensen and is the product of his Bachelors project</p>
+  </div>
+</div>
+
+
 </html>
