--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@ title: Mugs
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="http://mads379.github.com/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="file:///Users/Mads/dev/projects/mugs/css/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
+
 	<script src="http://mads379.github.com/mugs/js/jquery-1.5.1.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://mads379.github.com/mugs/bin/Mahj.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://mads379.github.com/mugs/bin/Option.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://mads379.github.com/mugs/bin/Traversable.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://mads379.github.com/mugs/bin/List.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://mads379.github.com/mugs/bin/Mugs.js" type="text/javascript" charset="utf-8"></script>
 
+  <script>
+    mugs.basePath = "http://mads379.github.com/mugs/bin/"
+    mugs.require("mugs.List")
+    mugs.require("mugs.TreeMap")
+    mugs.require("mugs.TreeSet")
+    mugs.require("mugs.RandomAccessList")
+    mugs.require("mugs.LLRBMap")
+    mugs.require("mugs.LLRBSet")
+    mugs.require("mugs.Stack")
+    mugs.require("mugs.Queue")
+  </script>
 
-	<script src="js/ace/ace.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/ace/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/ace/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
 	<script>
-	window.onload = function() {
+	  window.onload = function() {
 
 
 		function wrapInFunction(code) {
@@ -25,7 +31,8 @@ title: Mugs
 		}
 
 		$('#evaluate').bind('click',function() {
-      alert(eval(wrapInFunction($('#editor').val().replace(/\n/g,""))));
+      var code = $('#editor').val()
+      alert(eval(wrapInFunction(code)));
 		});
 
 	};
@@ -53,10 +60,10 @@ title: Mugs
   <p>This is a product of the bachelor project of Mads Hartmann Jensen under supervision of Peter Sestoft.</p> -->
 
   <h3>Try it out</h3>
-  <p>You can try out the different collections classes by typing javascript in the textarea below and hitting 'Evaluate' button.</p>
+  <p>You can try out the different collection classes by typing javascript in the textarea below and hitting 'Evaluate' button.</p>
 
 
-  <textarea id="editor">var list = new List(1,2,3,4,5,6,7,8,9,10);
+  <textarea id="editor">var list = new mugs.List([1,2,3,4,5,6,7,8,9,10]);
 
 var add = function(x,y) {
     return x + y ;
