Implemented a HashSet. Added it to the generic Set test

--- a/test/suite.html
+++ b/test/suite.html
@@ -30,6 +30,7 @@
         mugs.require("mugs.LLRBSet");
         mugs.require("mugs.LLRBMap");
         mugs.require("mugs.HashMap");
+        mugs.require("mugs.HashSet");
         
     </script>
 
