--- a/test/suite.html
+++ b/test/suite.html
@@ -32,6 +32,7 @@
         mugs.require("mugs.HashMap");
         mugs.require("mugs.HashSet");
         mugs.require("mugs.Multimap");        
+        mugs.require("mugs.parallel.Set");        
     </script>
 
     <script type="text/javascript" charset="utf-8">
@@ -82,6 +83,7 @@
 	<script src="data-types/Set.js" type="text/javascript" charset="utf-8"></script>
 	<script src="data-types/Map.js" type="text/javascript" charset="utf-8"></script>
     <script src="data-types/Multimap.js" type="text/javascript" charset="utf-8"></script>
+    <script src="data-types/ParallelSet.js" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<h1 id="qunit-header">QUnit tests of all collection classes</h1>
