Started working on the interfaces. Added test for 'Collection'

--- a/test/suite.html
+++ b/test/suite.html
@@ -74,7 +74,7 @@
 	<script src="data-structures/LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 
 	<!-- Test classes (data types) -->
-	<script src="data-types/Traversable.js" type="text/javascript" charset="utf-8"></script>
+	<script src="data-types/Collection.js" type="text/javascript" charset="utf-8"></script>
     <script src="data-types/Option.js" type="text/javascript" charset="utf-8"></script>
 	<script src="data-types/List.js" type="text/javascript" charset="utf-8"></script>
 	<script src="data-types/Stack.js" type="text/javascript" charset="utf-8"></script>
