Renamed Traversable to Collection. It's the base interface

--- a/test/performance/tree_comparison.html
+++ b/test/performance/tree_comparison.html
@@ -14,7 +14,7 @@
 	<!-- Library classes -->
 	<script src="../../bin/Mugs.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../bin/Option.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../../bin/Traversable.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../../bin/Collection.js" type="text/javascript" charset="utf-8"></script>
   <script src="../../bin/List.js" type="text/javascript" charset="utf-8"></script>
   <script src="../../bin/RedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../bin/TreeMap.js" type="text/javascript" charset="utf-8"></script>
