--- a/test/suite.html
+++ b/test/suite.html
@@ -18,7 +18,7 @@
 
     <script>
         mugs.basePath = "../bin/";
-        mugs.require("mugs.Traversable")
+        mugs.require("mugs.Collection")
         mugs.require("mugs.Some");
         mugs.require("mugs.None");
         mugs.require("mugs.List");
