Added the Extensible interface. All relevant prototypes now implements that interface. Added a test file for the Extensible interface

--- a/test/suite.html
+++ b/test/suite.html
@@ -73,8 +73,11 @@
 	<script src="data-structures/RandomAccessList.js" type="text/javascript" charset="utf-8"></script>
 	<script src="data-structures/LLRedBlackTree.js" type="text/javascript" charset="utf-8"></script>
 
+    <!-- Interfaces -->
+    <script src="data-types/Collection.js" type="text/javascript" charset="utf-8"></script>
+    <script src="data-types/Extensible.js" type="text/javascript" charset="utf-8"></script>
+    
 	<!-- Test classes (data types) -->
-	<script src="data-types/Collection.js" type="text/javascript" charset="utf-8"></script>
     <script src="data-types/Option.js" type="text/javascript" charset="utf-8"></script>
 	<script src="data-types/List.js" type="text/javascript" charset="utf-8"></script>
 	<script src="data-types/Stack.js" type="text/javascript" charset="utf-8"></script>
