Implemented all methos in Sequenced interface. Added a test

--- a/test/suite.html
+++ b/test/suite.html
@@ -76,6 +76,7 @@
     <!-- Interfaces -->
     <script src="data-types/Collection.js" type="text/javascript" charset="utf-8"></script>
     <script src="data-types/Extensible.js" type="text/javascript" charset="utf-8"></script>
+    <script src="data-types/Sequenced.js" type="text/javascript" charset="utf-8"></script>
     
 	<!-- Test classes (data types) -->
     <script src="data-types/Option.js" type="text/javascript" charset="utf-8"></script>
