Created a protortpe for Extensible and improved the tests

--- a/test/suite.html
+++ b/test/suite.html
@@ -19,6 +19,7 @@
     <script>
         mugs.basePath = "../bin/";
         mugs.require("mugs.Collection")
+        mugs.require("mugs.Extensible")
         mugs.require("mugs.Some");
         mugs.require("mugs.None");
         mugs.require("mugs.List");
